fix(docs): fixed navbar overlap issues (#971)
# Docs updates should not be submitted in this repository

Our doc site content is being automatically updated from
[Wing](https://github.com/winglang/wing) repository docs folder.

Please submit any changes to the docs as a PR
[here](https://github.com/winglang/wing/pulls)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -56,7 +56,7 @@ html[data-theme="dark"] {
   background: var(--ifm-menu-link-sublist-icon) 50% / 1rem 1rem;
 }
 
-.menu__list-item-collapsible > a {
+.menu__list-item-collapsible>a {
   font-weight: 600;
 }
 
@@ -70,7 +70,7 @@ html[data-theme="dark"] {
   font-weight: 700;
 }
 
-.theme-doc-sidebar-item-link-level-1 > a {
+.theme-doc-sidebar-item-link-level-1>a {
   font-weight: 600;
 }
 
@@ -327,6 +327,7 @@ html[data-theme="dark"] .nav-git:hover {
     padding-left: 2.4rem !important;
     padding-right: 2.4rem !important;
   }
+
   .docPage_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-styles-module,
   .docPage__5DB {
     padding-left: 1rem !important;
@@ -339,6 +340,7 @@ h2[itemprop="headline"] a {
   font-weight: 600;
   color: #1c1e21;
 }
+
 html[data-theme="dark"] h2[itemprop="headline"] a {
   color: #f1f0f1;
 }
@@ -365,6 +367,17 @@ html[data-theme="dark"] h2[itemprop="headline"] a {
   border-left: 6px solid rgb(76, 179, 212);
 }
 
-.example-list-checkbox, .submit-new-example {
+.example-list-checkbox,
+.submit-new-example {
   border: 1px solid rgb(210, 210, 210);
+}
+
+/* Fix for large navigation bar on desktop, remove the contact and blog links on certain sizes */
+@media (max-width: 1566px) {
+  .navbar__item[href="https://www.winglang.io/contact"] {
+    display: none;
+  }
+  .navbar__item[href="/blog"] {
+    display: none;
+  }
 }
